kubefiles/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-app-route
spec:
  to:
    kind: Service
    name: angular-app-service
